# Electronic-Wafer-MLOPS

./: .gitignore  .prettierignore  MANIFEST.in  README.md  package.json  setup.py
Wafer MLOPS/: LICENSE  RELEASE.md  install.json  pyproject.toml
Wafer MLOPS/.github/workflows/: build.yml  check-release.yml
Wafer MLOPS/Wafer MLOPS/: __init__.py  handlers.py
Wafer MLOPS/binder/: environment.yml  postBuild
Wafer MLOPS/schema/: plugin.json
Wafer MLOPS/src/: handler.ts
jupyter-config/nb-config/: Wafer MLOPS.json
jupyter-config/server-config/: Wafer MLOPS.json
myextension/: README.md  package.json  setup.py
myextension/.github/workflows/: build.yml
src/: index.ts
